sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:14: error: value unary_! is not a member of Int
  } while(!nbTri=0)
          ^